--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -16,7 +16,10 @@ jobs:
         with:
           java-version: 11
           distribution: 'adopt'
-      - run: mvn --batch-mode --update-snapshots verify
+      
+      - run: |
+          cd ./demo
+          mvn --batch-mode --update-snapshots verify
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
