--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -17,9 +17,7 @@ jobs:
           java-version: 11
           distribution: 'adopt'
       
-      - run: |
-          cd ./demo
-          mvn --batch-mode --update-snapshots verify
+      - run: mvn --batch-mode --update-snapshots verify
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
