--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,4 @@
-# List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
+
 tasks:
   - init: echo 'init script' # runs during prebuild
     command: echo 'start script'
@@ -7,3 +7,10 @@ tasks:
 ports:
   - port: 3000
     onOpen: open-preview
+
+vscode:
+  extensions:
+    - rangav.vscode-thunder-client
+    - GabrielBB.vscode-lombok
+    - vscjava.vscode-java-pack
+    - redhat.java
